Add Property model
