# src/controllers/index.ts
@@ -1,1 +1,2 @@
 export { UsersController } from './user.controller';
+export { PropertiesController } from './property.controller';
