# src/controllers/types/property.ts
@@ -1,0 +1,11 @@
+import { IUser } from './user';
+
+export interface IProperty {
+  id?: number;
+  name: string;
+  minRent: number;
+  maxRent: number;
+  user: IUser;
+  createdAt?: Date;
+  updatedAt?: Date;
+}
