# src/models/index.ts
@@ -1,1 +1,2 @@
 export { User } from './user.model';
+export { Property } from './property.model';
